Minor content change

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,9 +20,7 @@ block content
 			div.row			
 				div.col-sm-6
 					:markdown
-						#Municiplanner
+						##An app to get you in government
 		div.container.markdown
 			div.row			
 				div.col-sm-6
-					:markdown
-						##It's the bee's knees
