Icon and title change

--- a/views/_inc/header.jade
+++ b/views/_inc/header.jade
@@ -1,7 +1,7 @@
 head
 	//if lt IE 9
 		script(src='/scripts/html5shiv.js')
-	title where.io
+	title municiplanner
 	- if(settings.env=="development")
 		script(src="http://localhost:35729/livereload.js")
 	meta(name='viewport', content='width=device-width, initial-scale=1.0')
