--- a/views/_inc/_layout.jade
+++ b/views/_inc/_layout.jade
@@ -1,6 +1,7 @@
 !!! 5
-html	
+html
 	include ./header
+	include ../_mixins/feed.jade
 	body
 		//include ./ga.html
 		nav(role="navigation").navbar.navbar-default
