--- a/views/act/list.jade
+++ b/views/act/list.jade
@@ -4,21 +4,6 @@ block content
 	section#about_app.about
 		div.container
 			div.row
-				div.col-sm-6
-					:markdown
-						#About that app
-					
-						It's in production! We're rolling out on Android and iOS within the next 6 months and have some pretty ballin features in mind.
-			div.row
-				div.col-sm-6
-					:markdown
-						##Find users nearby
-					
-						Find users near you and get suggestions over activities you can do. We'll match you up based on reputation, availabilty and location.
-			div.row
-				div.col-sm-6
-					:markdown
-						##Get deals to do cool stuff.
-					
-						You let us know where you're out and about, and we'll make sure it's easier to have a good time. Check in with your friend or date and enjoy some serious where.io privileges at local businesses.
+				h1 Act List
 
+				
