--- a/public/styles/scss/site.scss
+++ b/public/styles/scss/site.scss
@@ -46,6 +46,20 @@ html,body{
 ---------------------*/
 
 /*-------------------
+	Feed
+---------------------*/
+
+.feed{
+	.feed-item{
+		img{width:100%;}
+	}
+}
+
+/*-------------------
+	End Feed
+---------------------*/
+
+/*-------------------
 	Foot
 ---------------------*/
 
