--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -40,9 +40,20 @@ html, body {
 	End Overrides
 ---------------------*/
 /*-------------------
+	Feed
+---------------------*/
+/* line 54, scss/site.scss */
+.feed .feed-item img {
+  width: 100%;
+}
+
+/*-------------------
+	End Feed
+---------------------*/
+/*-------------------
 	Foot
 ---------------------*/
-/* line 52, scss/site.scss */
+/* line 66, scss/site.scss */
 footer {
   background-color: #f3f3f3;
   box-sizing: border-box;
@@ -52,31 +63,31 @@ footer {
   overflow: auto;
   padding-top: .2em;
 }
-/* line 55, scss/site.scss */
+/* line 69, scss/site.scss */
 footer ul {
   list-style: none;
 }
-/* line 60, scss/site.scss */
+/* line 74, scss/site.scss */
 footer.row {
   margin-left: 0px;
   margin-right: 0px;
 }
-/* line 67, scss/site.scss */
+/* line 81, scss/site.scss */
 footer .left {
   text-align: left;
 }
-/* line 68, scss/site.scss */
+/* line 82, scss/site.scss */
 footer .right {
   text-align: right;
 }
-/* line 71, scss/site.scss */
+/* line 85, scss/site.scss */
 footer > ul {
   padding-top: 10px;
 }
 @media (max-height: 500px) {
-  /* line 52, scss/site.scss */
+  /* line 66, scss/site.scss */
   footer {
-    position: static;
+    /*position:static;*/
   }
 }
 
