--- a/public/styles/scss/site.scss
+++ b/public/styles/scss/site.scss
@@ -53,8 +53,9 @@ html,body{
 	padding-left:3px;
 	padding-right:3px;
 	.feed-item{
+		.title{margin-top:0;}
 		img{width:97%;border:solid 3px #eee;}
-		
+		 
 		padding-top:8px;
 		padding-bottom:8px;
 		border-top:solid 1px #ddd; 
@@ -71,6 +72,9 @@ html,body{
 /*-------------------
 	Foot
 ---------------------*/
+@media (max-width: $container_width){
+
+}
 
 footer{
 	background-color:#f3f3f3;
