--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -54,16 +54,20 @@ html, body {
   border-top: solid 1px #ddd;
 }
 /* line 56, scss/site.scss */
+.feed .feed-item .title {
+  margin-top: 0;
+}
+/* line 57, scss/site.scss */
 .feed .feed-item img {
   width: 97%;
   border: solid 3px #eee;
 }
-/* line 61, scss/site.scss */
+/* line 62, scss/site.scss */
 .feed .feed-item:first-child {
   border-top: none;
   padding-top: 0;
 }
-/* line 62, scss/site.scss */
+/* line 63, scss/site.scss */
 .feed .feed-item:last-child {
   padding-bottom: 0;
 }
@@ -74,7 +78,7 @@ html, body {
 /*-------------------
 	Foot
 ---------------------*/
-/* line 75, scss/site.scss */
+/* line 79, scss/site.scss */
 footer {
   background-color: #f3f3f3;
   box-sizing: border-box;
@@ -84,29 +88,29 @@ footer {
   overflow: auto;
   padding-top: .2em;
 }
-/* line 78, scss/site.scss */
+/* line 82, scss/site.scss */
 footer ul {
   list-style: none;
 }
-/* line 83, scss/site.scss */
+/* line 87, scss/site.scss */
 footer.row {
   margin-left: 0px;
   margin-right: 0px;
 }
-/* line 90, scss/site.scss */
+/* line 94, scss/site.scss */
 footer .left {
   text-align: left;
 }
-/* line 91, scss/site.scss */
+/* line 95, scss/site.scss */
 footer .right {
   text-align: right;
 }
-/* line 94, scss/site.scss */
+/* line 98, scss/site.scss */
 footer > ul {
   padding-top: 10px;
 }
 @media (max-height: 500px) {
-  /* line 75, scss/site.scss */
+  /* line 79, scss/site.scss */
   footer {
     /*position:static;*/
   }
