--- a/views/act/commit.jade
+++ b/views/act/commit.jade
@@ -1,7 +1,12 @@
 extends ../_inc/_layout
 
 block content
-	section#about_app.about
+	section#act_app.act
 		div.container
 			div.row
-				h1 Commit
+				h1 
+					span You're Going to 
+					span=act.name
+
+
+					
