--- a/public/styles/scss/site.scss
+++ b/public/styles/scss/site.scss
@@ -62,6 +62,10 @@ html,body{
 			}
 		
 		}
+		.left{float:left;}
+		.right{float:right;}
+		button{margin:0 5px;}
+		button:last-child{margin-right:0px;}
 		 
 		padding-top:8px;
 		padding-bottom:8px;
