--- a/views/_inc/header.jade
+++ b/views/_inc/header.jade
@@ -8,4 +8,5 @@ head
 	link(href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic' rel='stylesheet',type='text/css')
 	link(rel='stylesheet', href='/styles/lib.'+(pretty?'':'min.')+'css')  
 	link(rel='stylesheet', href='/styles/site.css')
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 	script(type='text/javascript', src='/scripts/jquery.min.js') 
