--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,6 @@ block nav
 
 block content
 	section#index
-		div.container
-			div.row			
-				+feed(feed,"index");
+		//div.container
+		div.row			
+			+feed(feed,"index");
