--- a/views/_inc/_layout.jade
+++ b/views/_inc/_layout.jade
@@ -7,7 +7,7 @@ html
 		nav(role="navigation").navbar.navbar-default
 			div.container
 				a#brand.navbar-brand(href='/')
-					| municiplanner
+					| MUNICIPLANNER
 					//img#brand_img(src='/images/brand.png')
 				ul.nav.navbar-nav.navbar-left.compressable
 					//li
