--- a/views/about/app.jade
+++ b/views/about/app.jade
@@ -4,21 +4,34 @@ block content
 	section#about_app.about
 		div.container
 			div.row
-				div.col-sm-6
-					:markdown
-						#About that app
-					
-						It's in production! We're rolling out on Android and iOS within the next 6 months and have some pretty ballin features in mind.
-			div.row
-				div.col-sm-6
-					:markdown
-						##Find users nearby
-					
-						Find users near you and get suggestions over activities you can do. We'll match you up based on reputation, availabilty and location.
-			div.row
-				div.col-sm-6
-					:markdown
-						##Get deals to do cool stuff.
-					
-						You let us know where you're out and about, and we'll make sure it's easier to have a good time. Check in with your friend or date and enjoy some serious where.io privileges at local businesses.
-
+				
+				.col-md-4
+					.content_done
+						.row
+							.col-md-3
+								.icon
+									i.fa.fa-group
+							.col-md-9
+								h2 Get Involved.
+								p
+									| Browse local elections, city council meetings, and public hearings so that you can take part and have a direct impact on society.
+				.col-md-4
+					.content_done
+						.row
+							.col-md-3
+								.icon
+									i.fa.fa-comments
+							.col-md-9
+								h2 Spark Conversation.
+								p
+									| MuniciPlanner makes it easy to share events you're attending across all your networks to help get your friends involved in local government.
+				.col-md-4
+					.content_done
+						.row
+							.col-md-3
+								.icon
+									i.fa.fa-bar-chart-o
+							.col-md-9
+								h2 Track Engagement. 
+								p
+									| With MuniciPlanner, staying up to date with election and meeting vote results has never been easier. Track how you and your friends have made a difference over time.
