--- a/views/act/commit.jade
+++ b/views/act/commit.jade
@@ -5,6 +5,7 @@ block content
 		div.container
 			div.row
 				h1 
+					span.glyphicon.glyphicon-ok.green
 					span You're Going to 
 					span=act.name
 
