--- a/public/styles/scss/site.scss
+++ b/public/styles/scss/site.scss
@@ -14,6 +14,7 @@
   font-style: normal;
   font-weight: normal;
   line-height: 1;
+  margin:0px 10px;
   }
 
 $container_width:992px; 
@@ -21,8 +22,8 @@ $bar_height:500px;
 
  $doc_padding:30px;
 
-$nav_background:#eee;
-$nav_text:#222;
+$nav_background:#111;
+$nav_text:#eee;
 
 .navbar-default{
 	background-color:$nav_background;
@@ -32,9 +33,15 @@ $nav_text:#222;
 	color: $nav_text;
 }
 
-h1, h2, h3, h4, #brand{font-family:'Open Sans'; font-weight:300;}
+h1, h2, h3, h4, {font-family:'Open Sans'; font-weight:300;}
+
+#brand{
+	font-family:"Lora", "Open Sans";
+	font-weight:bold;
+}
 
 
+.green{color:#87CC81;}
 
 /*-------------------
 	Bootstrap Override
@@ -77,6 +84,7 @@ html,body{
 			}
 		
 		}
+
 		.left{float:left;}
 		.right{float:right;}
 		button{margin:0 5px;}
