--- a/views/_inc/header.jade
+++ b/views/_inc/header.jade
@@ -9,4 +9,5 @@ head
 	link(rel='stylesheet', href='/styles/lib.'+(pretty?'':'min.')+'css')  
 	link(rel='stylesheet', href='/styles/site.css')
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
 	script(type='text/javascript', src='/scripts/jquery.min.js') 
