--- a/views/_inc/_layout.jade
+++ b/views/_inc/_layout.jade
@@ -9,9 +9,10 @@ html
 				a#brand.navbar-brand(href='/')
 					| MUNICIPLANNER
 					//img#brand_img(src='/images/brand.png')
+				
 				ul.nav.navbar-nav.navbar-left.compressable
-					//li
-						a(href='/places') Places				
+					li
+						a(href='/about/app') Story				
 				block nav
 
 				.nav.navbar-nav.navbar-right
