--- a/views/index.jade
+++ b/views/index.jade
@@ -6,5 +6,9 @@ block nav
 block content
 	section#index
 		//div.container
+		div.container 
+			div.row
+				button.right.btn.btn-danger#pause Pause
+				button.right.btn.btn-success#all Get All
 		div.row			
 			+feed(feed,"index");
