--- a/public/styles/scss/site.scss
+++ b/public/styles/scss/site.scss
@@ -125,6 +125,17 @@ button.right{float:right;position:relative;right:30px;bottom:10px;margin-left:10
 @media (max-width: $container_width){
 
 }
+#points{
+	font-size:15pt;
+	margin-top:10px;
+	margin-bottom:10px;
+}
+#share{
+	a{
+		display:inline-block;
+		margin:0 4px;
+	}
+}
 
 footer{
 	background-color:#f3f3f3;
