--- a/views/_mixins/feed.jade
+++ b/views/_mixins/feed.jade
@@ -5,7 +5,7 @@ mixin feed-item(item,i,namespace)
 				a.img-wrapper(href='/act/detail/10')
 					img(src=item.media.src)
 			div.col-sm-9
-				a(href='/act/detail/10')
+				a(href='/act/detail/'+i)
 					h3.title=item.name
 				div.left
 					- if(item.distance)
