--- a/views/_inc/_layout.jade
+++ b/views/_inc/_layout.jade
@@ -12,7 +12,7 @@ html
 				
 				ul.nav.navbar-nav.navbar-left.compressable
 					li
-						a(href='/about/app') Story				
+						a(href='/landing/') Story				
 				block nav
 
 				.nav.navbar-nav.navbar-right
