--- a/public/styles/scss/site.scss
+++ b/public/styles/scss/site.scss
@@ -114,7 +114,9 @@ html,body{
 }
 body{padding-bottom:50px;}
 button.right{float:right;position:relative;right:30px;bottom:10px;margin-left:10px;}
-.checkbox.left{float:float;display:inline-block;vertical-align:middle;margin-top:0;margin-right:4px;position:relative;left:10px;bottom:10px;border:solid 1px #ddd;padding:4px;border-radius:3px;padding-left:30px;
+button.left{float:left;position:relative;left:30px;bottom:10px;margin-right:40px;}
+#filters{margin-top:10px;}
+.checkbox.left{float:float;display:inline-block;vertical-align:middle;margin-top:0px;margin-right:4px;position:relative;left:10px;bottom:10px;border:solid 1px #ddd;padding:4px;border-radius:3px;padding-left:30px;
 	
 }
 /*-------------------
