--- a/views/index.jade
+++ b/views/index.jade
@@ -9,13 +9,16 @@ block content
 		div.container 
 			div.row
 				div.col-xs-6
+					button.left.btn.btn-info(type='button',data-toggle="collapse" data-target='#filters') Filters
+				div.col-xs-6
+					button.right.btn.btn-danger#pause Pause
+					button.right.btn.btn-success#all Get All
+			div.row
+				div#filters.collapse.col-sm-12
 					- each key,val in {vote:"Voting",council:"Council",volunteer:"Volunteer Work"}
 						div.checkbox.left
 							label
 								| #{key}
 								input(type="checkbox",checked='checked',class='check-it',value=val)
-				div.col-xs-6
-					button.right.btn.btn-danger#pause Pause
-					button.right.btn.btn-success#all Get All
 		div.row			
 			+feed(feed,"index");
