--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -93,7 +93,7 @@ body{
 	font-size: 15px;	
 	line-height:26px;
 	color:#000;
-	background-color: #fff;
+	background-color: #000;
 	font-family: 'Open Sans', sans-serif;
 }
 a:hover{
@@ -365,9 +365,10 @@ input{
 /* Main ---------------------------------------------------------------*/
 .main{
 	position: relative;
+	background-color: #000;
 }
 .main_slide{
-	height: 769px;
+	height: 866px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -415,6 +416,7 @@ input{
 	padding-bottom: 20px;
 	line-height: 50px;
 	width: 70%;
+	min-height:6em;
 	margin: 0 auto;
 }
 .main_title p{
@@ -482,7 +484,7 @@ input{
 /* Bar - (register to vote, contact us, donate) ---------------------*/
 
 .done_info{
-	background-color:  rgba(0,0,0,0.6);
+	background-color:  rgb(0,0,0);
 	position: absolute;
 	width: 100%;
 	text-align: left;
@@ -1505,3 +1507,5 @@ footer .contact li{
 		height: 200px;
 	}
 }
+#track_engagement_icon{position:relative;left:-6px;}
+p.short,.main_title p.short{margin-top:0;margin-bottom:0;min-height:0;height:auto;padding:12px 0;clear:both;}
